[metadata]
name = higgins
version = 0.1.0
author = Steven Abney
author_email = abney@umich.edu
description = Higgins Decoder
long_description = file: README.md
long_description_content_type = text/markdown
url = URL
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6

[options.packages.find]
where = src
